[metadata]
name = hibp-py
version = 0.0.1
description = Parses and tracks haveibeenpwned.com data breaches
long_description = file: README.md
long_description_content_type = text/markdown
author = Pavel Sushko
author_email = SB Software Inc. <info@sbsoftware.ca>
license = MIT
license_files = LICENSE

classifiers = 
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = hibp_py
package_dir =
    =src
install_requires =
    requests >= 2.28.2
python_requires = >=3.6,<3.12
zip_safe = no